--- a/src/test/java/com/qacart/todo/config/production.properties
+++ b/src/test/java/com/qacart/todo/config/production.properties
@@ -1,3 +1,3 @@
-baseURL=https://qacart-todo.herokuapp.com/login
+baseurl=https://qacart-todo.herokuapp.com
 email=madrane9@hotmail.com
 password=madrane9
