--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,19 @@
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.0.0-M7</version>
       <configuration>
+        <argLine>
+          -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.9.1/aspectjweaver-1.9.9.1.jar"
+        </argLine>
         <parallel>methods</parallel>
         <threadCount>3</threadCount>
       </configuration>
+      <dependencies>
+        <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.9.9.1</version>
+        </dependency>
+      </dependencies>
     </plugin>
     </plugins>
   </build>
@@ -90,6 +100,13 @@
       <artifactId>javafaker</artifactId>
       <version>1.0.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.20.1</version>
+    </dependency>
+
 
   </dependencies>
 </project>
